pkg_precios/objects/Solicitud_Cambio_Precios__c.object
<CustomObject>
    <label>Solicitud Cambio Precios</label>
    <nameField>
        <displayFormat>SCP-{0000}</displayFormat>
        <label>Número de Solicitud</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitudes Cambio Precios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Pendiente</fullName><default>true</default><label>Pendiente</label></value>
                <value><fullName>Aprobado</fullName><default>false</default><label>Aprobado</label></value>
                <value><fullName>Rechazado</fullName><default>false</default><label>Rechazado</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <label>Marca</label>
        <type>Text</type>
        <length>50</length>
    </fields>
    <fields>
        <fullName>Sociedad__c</fullName>
        <label>Sociedad</label>
        <type>Text</type>
        <length>10</length>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Individual</fullName><default>false</default><label>Individual</label></value>
                <value><fullName>Masiva</fullName><default>false</default><label>Masiva</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comentario__c</fullName>
        <label>Comentario</label>
        <type>LongTextArea</type>
        <length>1000</length>
    </fields>
</CustomObject>